@@ -8,6 +8,7 @@ YYYY-MM-DD
     - Fix handling of collapsed edges skipping in BufferOp (#494)
     - Print up to 18 digits of precision for TopologyException points
     - Fix noding with reduced precision in Buffer operation (#473)
+    - Fix HotPixel original point invalidation (#498)
 
 Changes in 3.3.1
 2011-09-27
